// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid deve renderizar corretamente 1`] = `
<div
  class="css-1amqo09"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 2`] = `
<div
  class="css-1dis21i"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 3`] = `
<div
  class="css-li5rtm"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 4`] = `
<div
  class="css-1fuy4u2"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 5`] = `
<div
  class="css-36t976"
>
  Content
</div>
`;
